--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "knex": "^0.16.3",
+    "nightmare": "^3.0.1",
     "pg": "^7.8.0"
   },
   "devDependencies": {},
