--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "nightmare": "^3.0.1",
     "pg": "^7.8.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "mocha": "^5.2.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test mocha --exit"
   },
   "keywords": [],
   "author": "",
