Add test database to travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ node_js:
 - node
 notifications:
   email: false
+services:
+ - postgresql
+before_script:
+ - psql -c 'CREATE DATABASE byob_tests;' -U postgres
